<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/space_48"
    android:orientation="horizontal">

    <com.projectbase.mainapp.main.home.dailyblog.bottomfunc.ItemBottomFunc
        android:id="@+id/button_like"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        label="@string/button_like_daily_blog"
        image="@drawable/ic_like"/>

    <View
        android:id="@+id/line_bottom_func_1"
        android:layout_width="@dimen/space_1"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/space_8"
        android:background="@color/dark_5"/>

    <com.projectbase.mainapp.main.home.dailyblog.bottomfunc.ItemBottomFunc
        android:id="@+id/button_comment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        label="@string/button_comment_daily_blog"
        image="@drawable/ic_comment"/>

    <View
        android:id="@+id/line_bottom_func_2"
        android:layout_width="@dimen/space_1"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/space_8"
        android:background="@color/dark_5"/>


    <com.projectbase.mainapp.main.home.dailyblog.bottomfunc.ItemBottomFunc
        android:id="@+id/button_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        label="@string/button_share_daily_blog"
        image="@drawable/ic_share"/>
</LinearLayout>
