<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_bottom_menu"
    android:layout_width="match_parent"
    android:layout_height="@dimen/space_56"
    android:background="@drawable/bg_bottom_menu">

    <com.projectbase.mainapp.main.bottommenu.ItemBottomMenu
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/line_vertical_25"
        android:layout_width="@dimen/space_48"
        android:layout_height="@dimen/space_48"
        image_active = "@drawable/ic_home_on"
        image_inactive = "@drawable/ic_home_off"
        label = "@string/item_btm_home"/>

    <com.projectbase.mainapp.main.bottommenu.ItemBottomMenu
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/line_vertical_25"
        app:layout_constraintRight_toLeftOf="@id/line_vertical_50"
        android:layout_width="@dimen/space_48"
        android:layout_height="@dimen/space_48"
        image_active = "@drawable/ic_training_on"
        image_inactive = "@drawable/ic_training_off"
        label = "@string/item_btm_training"/>

    <com.projectbase.mainapp.main.bottommenu.ItemBottomMenu
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/line_vertical_50"
        app:layout_constraintRight_toLeftOf="@id/line_vertical_75"
        android:layout_width="@dimen/space_48"
        android:layout_height="@dimen/space_48"
        image_active = "@drawable/ic_exam_on"
        image_inactive = "@drawable/ic_exam_off"
        label = "@string/item_btm_exam"/>

    <com.projectbase.mainapp.main.bottommenu.ItemBottomMenu
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/line_vertical_75"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/space_48"
        android:layout_height="@dimen/space_48"
        image_active = "@drawable/ic_more_on"
        image_inactive = "@drawable/ic_more_off"
        label = "@string/item_btm_more"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_vertical_25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_vertical_50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_vertical_75"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

</androidx.constraintlayout.widget.ConstraintLayout>
