<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80"
        android:padding="@dimen/space_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/logo_string"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_35"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_find" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager_banners"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_160"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_daily_blog"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_480"
                app:cardElevation="@dimen/space_8"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/header_view_daily_blog"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_48"
                        android:background="@color/blue_70"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="@dimen/space_8"
                        android:text="@string/label_view_daily_blog"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_20"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/container_item_daily_blog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/header_view_daily_blog"
                        android:scrollbars="none" />

                    <Button
                        android:id="@+id/button_view_more_daily_blog"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/space_24"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="@dimen/space_4"
                        android:text="@string/button_view_more"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_10"
                        android:textColor="@color/white"
                        android:background="@drawable/background_button"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_daily_challenge"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_120"
                app:cardElevation="@dimen/space_8"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_8">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/background_daily_challenge"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_48"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/space_8"
                    android:textSize="@dimen/text_20"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:background="@color/dark_20"
                    android:text="@string/label_view_daily_challenge"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_game"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_120"
                app:cardElevation="@dimen/space_8"
                android:layout_margin="@dimen/space_10"
                app:cardCornerRadius="@dimen/space_8">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/background_games"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_48"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="@dimen/space_8"
                    android:textSize="@dimen/text_20"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:background="@color/dark_20"
                    android:text="@string/label_view_game"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
